# ciSimFS

./: .gitignore  CMakeLists.txt  LICENSE.md  test_simfs.c
Project/: CMakeLists.txt  fuse.h  simfs.c  simfs.h  test_simfs.c
Project/fuse/: fuse_common.h  fuse_opt.h
Project/src/: bitvector.c  bitvector.h  block.h  context.c  context.h  error.c  error.h  simfs.c  simfs.h  simfs.test.c  volume.c  volume.h
Project/src/common/: bitvector.h  block.c  block.h
Project/src/context/: context.c  context.h  directory.c  directory.h
Project/src/volume/: volume.c  volume.h
Project01/: .gitignore  CMakeLists.txt  simfs.c  simfs.h
fuse/: fuse.h
src/: simfs.c
src/context/: context.h
